// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utility function formatSingleDigit works correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "transparent",
      }
    }
  >
    0
  </Text>
  5
</Text>
`;

exports[`Utility function formatSingleDigit works correctly 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  10
</Text>
`;
